fix: Reduce amount of spacing on bottom margin of the h1 in extra.css.

--- a/proactive/docs/stylesheets/extra.css
+++ b/proactive/docs/stylesheets/extra.css
@@ -27,7 +27,7 @@
     font-weight: 600;
     font-size: 2.75rem;
     line-height: 1.0;
-    margin-bottom: .75em;
+    margin-bottom: .5em;
     letter-spacing: -0.01em;
 }
 
